# mwe_fractional_scaling_bug

./: .gitignore  CMakeLists.txt  default.nix  flake.nix
src/: CMakeLists.txt  main.cpp  screenshot.cpp  screenshot.h
